Fix bg flicker

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
-.App {
-  height: 100vh;
-  background-image: url("/assets/img/bg_image.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+// .App {
+//   height: 100vh;
+//   background-image: url("/assets/img/bg_image.png");
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   background-size: cover;
+// }
